<resources>
    <string name="app_name" translatable="false">Validators</string>
    <string name="sign_in" translatable="false">sing in</string>
    <string name="sign_up" translatable="false">sign up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="father_name" translatable="false">Patronymic</string>
    <string name="done" translatable="false">Done</string>
</resources>